--- a/infrastructure/pvc/kustomization.yaml
+++ b/infrastructure/pvc/kustomization.yaml
@@ -1,11 +1,5 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: logs
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+  - pvc.yaml
+  
