--- a/infrastructure/pvc/logs.yaml
+++ b/infrastructure/pvc/logs.yaml
@@ -1,3 +1,12 @@
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: logs
+provisioner: file.csi.azure.com
+parameters:
+  skuName: Standard_LRS
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
