--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -13,6 +13,7 @@ images:
   newName: scr.sitecore.com/sxp/sitecore-id7
   newTag: 10.3-ltsc2022
 resources:
+- init
 - configmaps
 - cm.yaml
 - cd.yaml
