--- a/apps/init/solr-init.yaml
+++ b/apps/init/solr-init.yaml
@@ -23,5 +23,10 @@ spec:
             secretKeyRef:
               name: sitecore-solr
               key: sitecore-solr-core-prefix-name.txt
+        - name: TOPOLOGY
+          valueFrom:
+            secretKeyRef:
+              name: sitecore-solr
+              key: sitecore-solr-core-topology.txt
       restartPolicy: Never
   backoffLimit: 5
