--- a/infrastructure/secrets/kustomization.yaml
+++ b/infrastructure/secrets/kustomization.yaml
@@ -43,6 +43,7 @@ secretGenerator:
   files:
   - sitecore-solr-connection-string.txt
   - sitecore-solr-core-prefix-name.txt
+  - sitecore-solr-core-topology.txt
 - name: sitecore-protect-media-requests
   files:
   - sitecore-media-request-protection-shared-secret.txt
