--- a/infrastructure/external/kustomization.yaml
+++ b/infrastructure/external/kustomization.yaml
@@ -9,8 +9,8 @@ images:
   newName: redis
   newTag: 4.0.14-alpine
 - name: solr
-  newName: solr
-  newTag: 8.11.2
+  newName: scr.sitecore.com/sxp/sitecore-xm1-solr
+  newTag: 10.0.3-ltsc2012
 
 resources:
   - mssql.yaml
