--- a/infrastructure/external/kustomization.yaml
+++ b/infrastructure/external/kustomization.yaml
@@ -5,14 +5,10 @@ images:
 - name: mssql
   newName: mcr.microsoft.com/mssql/server
   newTag: 2017-CU21-ubuntu-16.04
-- name: redis
-  newName: redis
-  newTag: 4.0.14-alpine
 - name: solr
-  newName: solr
-  newTag: 8.11.2
+  newName: scr.sitecore.com/nonproduction/solr
+  newTag: 8.11.2-ltsc2022
 
 resources:
   - mssql.yaml
-  - redis.yaml
   - solr.yaml
