--- a/infrastructure/external/mssql.yaml
+++ b/infrastructure/external/mssql.yaml
@@ -26,7 +26,7 @@ spec:
         app: mssql
     spec:
       nodeSelector:
-        kubernetes.io/os: linux
+        kubernetes.io/os: windows
       containers:
       - name: mssql
         image: mssql
