--- a/infrastructure/external/solr.yaml
+++ b/infrastructure/external/solr.yaml
@@ -26,7 +26,7 @@ spec:
         app: solr
     spec:
       nodeSelector:
-        kubernetes.io/os: linux
+        kubernetes.io/os: windows
       containers:
       - name: solr
         image: solr
