--- a/infrastructure/external/mssql.yaml
+++ b/infrastructure/external/mssql.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: mssql
 spec:
+  nodeSelector:
+    kubernetes.io/os: windows
   selector:
     app: mssql
   ports:
