--- a/infrastructure/external/mssql.yaml
+++ b/infrastructure/external/mssql.yaml
@@ -3,8 +3,6 @@ kind: Service
 metadata:
   name: mssql
 spec:
-  nodeSelector:
-    kubernetes.io/os: windows
   selector:
     app: mssql
   ports:
@@ -28,7 +26,7 @@ spec:
         app: mssql
     spec:
       nodeSelector:
-        kubernetes.io/os: windows
+        kubernetes.io/os: linux
       containers:
       - name: mssql
         image: mssql
