--- a/infrastructure/external/kustomization.yaml
+++ b/infrastructure/external/kustomization.yaml
@@ -6,8 +6,8 @@ images:
   newName: mcr.microsoft.com/mssql/server
   newTag: 2017-CU21-ubuntu-16.04
 - name: solr
-  newName: solr
-  newTag: 8.11.2
+  newName: sitecore-xp-sxa-solr
+  newTag: 9.3.0-linux
 
 resources:
   - mssql.yaml
