--- a/infrastructure/external/kustomization.yaml
+++ b/infrastructure/external/kustomization.yaml
@@ -6,7 +6,7 @@ images:
   newName: mcr.microsoft.com/mssql/server
   newTag: 2017-CU21-ubuntu-16.04
 - name: solr
-  newName: sitecore-xp-sxa-solr
+  newName: scr.sitecore.com/sxp/sitecore-xp-sxa-solr
   newTag: 9.3.0-linux
 
 resources:
