Revert "no redis"
This reverts commit 5e6204c6cfa6a302eaf43be0815e32e1ef157dbd.

--- a/infrastructure/ingress-nginx/kustomization.yaml
+++ b/infrastructure/ingress-nginx/kustomization.yaml
@@ -20,6 +20,13 @@ replacements:
       version: v1
     fieldPaths:
     - spec.rules.[host=cd-placeholder-hostname].host
+  - select:
+      group: networking.k8s.io
+      kind: Ingress
+      name: sitecore-ingress
+      version: v1
+    fieldPaths:
+    - spec.tls.[secretName=global-cd-tls].hosts.0
 - source:
     fieldPath: data.cm-hostname
     kind: ConfigMap
@@ -33,6 +40,13 @@ replacements:
       version: v1
     fieldPaths:
     - spec.rules.[host=cm-placeholder-hostname].host
+  - select:
+      group: networking.k8s.io
+      kind: Ingress
+      name: sitecore-ingress
+      version: v1
+    fieldPaths:
+    - spec.tls.[secretName=global-cm-tls].hosts.0
 - source:
     fieldPath: data.id-hostname
     kind: ConfigMap
@@ -46,3 +60,10 @@ replacements:
       version: v1
     fieldPaths:
     - spec.rules.[host=id-placeholder-hostname].host
+  - select:
+      group: networking.k8s.io
+      kind: Ingress
+      name: sitecore-ingress
+      version: v1
+    fieldPaths:
+    - spec.tls.[secretName=global-id-tls].hosts.0
