--- a/infrastructure/external/kustomization.yaml
+++ b/infrastructure/external/kustomization.yaml
@@ -5,10 +5,14 @@ images:
 - name: mssql
   newName: mcr.microsoft.com/mssql/server
   newTag: 2017-CU21-ubuntu-16.04
+- name: redis
+  newName: redis
+  newTag: 4.0.14-alpine
 - name: solr
   newName: solr
   newTag: 8.11.2
 
 resources:
   - mssql.yaml
+  - redis.yaml
   - solr.yaml
