--- a/infrastructure/ingress-nginx/ingress.yaml
+++ b/infrastructure/ingress-nginx/ingress.yaml
@@ -43,3 +43,13 @@ spec:
             name: id
             port: 
               number: 80
+  tls:
+  - secretName: global-cd-tls
+    hosts:
+    - cd-placeholder-hostname
+  - secretName: global-cm-tls
+    hosts:
+    - cm-placeholder-hostname
+  - secretName: global-id-tls
+    hosts:
+    - id-placeholder-hostname
