--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -2,6 +2,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: master
 
+images:
+- name: mssql
+  newName: mcr.microsoft.com/mssql/server
+  newTag: 2017-CU21-ubuntu-16.04
+- name: redis
+  newName: redis
+  newTag: 4.0.14-alpine
+- name: solr
+  newName: solr
+  newTag: 8.11.2
+
 resources:
   - secrets
   - external
